<resources>
    <string name="app_name">KaraOK</string>
    <string name="firstTeamName">Թիմ 1</string>
    <string name="secondTeamName">Թիմ 2</string>
    <string name="pointTitle">Միավոր</string>
    <string name="durationTitle">Տևողություն</string>
    <string name="penalyPointTitle">Պահվող վայրկյան</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>